Erase,daybad,16may

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Proyect Atlas</title>
 </head>
 <body>
+
     <header>
     <section class="header">
-        <div class="container-logo"> <img src="images/fox.png" alt="logo"></div>
+        <div class="navbar">
+            <div class="container-logo"> <img src="images/fox.png" alt="logo"></div>
+            <h1> Get Early Access</h1>
+        </div>
       
     </section>
 </header>
