--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
 
 </section>
 
+<section class="mid-low">
+
+    <div class="letters-mid-low">
+    <h1>Take a look inside</h1>
+        <p>Te iisque labitur eos, nec sale argumentum scribentur no, <br>
+        augue disputando in vim. Erat fugit sit at, ius lorem deserunl delerrruissel no.</p>
+         <div class="Learn-More"> 
+            <button type="submit">Learn More</button>
+        </div>
+    </div>
+    <img src="images/feature-1.png"">
+</div>
+
+    
+</section>
+
 </body>
 </html>
 
