--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 
 </section>
 
-<section class="mid-low">
 
+
+<section class="mid-low">
+    <div class="triangulo"></div>
     <div class="letters-mid-low">
     <h1>Take a look inside</h1>
         <p>Te iisque labitur eos, nec sale argumentum scribentur no, <br>
@@ -75,11 +77,24 @@
          <div class="Learn-More"> 
             <button type="submit">Learn More</button>
         </div>
+        
     </div>
-    <img src="images/feature-1.png"">
+    <img src="images/feature-1.png">
+ </div>
 </div>
-
     
+</section>
+
+<section class="taper-low">
+    <img src="images/feature-2.png" alt="">
+
+    <div class="letters-mid-low">
+        <h1>Safe and reliable</h1>
+            <p>Duo suas detracto maiestatis ad, commodo lucilius invenire nec ad, <br>
+            eum et oratio disputationi. Falli lobortis his ad</p>
+             <div class="Learn-More"> 
+                <button type="submit">Learn More</button>
+            </div>
 </section>
 
 </body>
