--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 <section class="mid-low">
-    <div class="triangulo"></div>
+    <div class="trapecio"></div>
     <div class="letters-mid-low">
     <h1>Take a look inside</h1>
         <p>Te iisque labitur eos, nec sale argumentum scribentur no, <br>
@@ -88,13 +88,52 @@
 <section class="taper-low">
     <img src="images/feature-2.png" alt="">
 
-    <div class="letters-mid-low">
+    <div class="letters-taper-low">
         <h1>Safe and reliable</h1>
             <p>Duo suas detracto maiestatis ad, commodo lucilius invenire nec ad, <br>
             eum et oratio disputationi. Falli lobortis his ad</p>
              <div class="Learn-More"> 
                 <button type="submit">Learn More</button>
             </div>
+</section>
+
+<section class="pricings">
+    <h2>Check our pricing</h2>
+    <div class="line-pricinge">
+        <div class="price-1">
+            <h5>STARTUP</h5>
+            <h6>$<big>0</big> MO/</h6>
+            <p>Up to 5 Documents</p>
+            <p>Up to 3 Reviews</p>
+            <p>5 Team Members</p>
+            <p>Limited Support</p>
+            <div class="button-price1">
+                <p>Get Free</p>
+            </div>
+        </div>
+        <div class="price-2">
+            <h5>PREMIUM</h5>
+            <h6>$<big>10</big> MO/</h6>
+            <p>Up to 15 Documents</p>
+            <p>Up to 10 Reviews</p>
+            <p>25 Team Members</p>
+            <p>Limited Support</p>
+            <div class="button-price2">
+                <p>Get Free</p>
+            </div>
+        </div>
+        <div class="price-3">
+            <h5>PROFESSIONAL</h5>
+            <h6>$<big>30</big> MO/</h6>
+            <p>Unlimited Documents</p>
+            <p>Unlimited Reviews</p>
+            <p>Unlimited Members</p>
+            <p>Unlimited Support</p>
+            <div class="button-price3">
+                <p>Get Free</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 </body>
