--- a/index.html
+++ b/index.html
@@ -100,37 +100,37 @@
 <section class="pricings">
     <h2>Check our pricing</h2>
     <div class="line-pricinge">
-        <div class="price-1">
+        <div class="price1">
             <h5>STARTUP</h5>
-            <h6>$<big>0</big> MO/</h6>
+            <h6>$<big>0</big> /MO</h6>
             <p>Up to 5 Documents</p>
             <p>Up to 3 Reviews</p>
             <p>5 Team Members</p>
             <p>Limited Support</p>
-            <div class="button-price1">
-                <p>Get Free</p>
+            <div class="Get-Free"> 
+                <button type="submit">Get Free</button>
             </div>
         </div>
-        <div class="price-2">
+        <div class="price2">
             <h5>PREMIUM</h5>
-            <h6>$<big>10</big> MO/</h6>
+            <h6>$<big>10</big> /MO</h6>
             <p>Up to 15 Documents</p>
             <p>Up to 10 Reviews</p>
             <p>25 Team Members</p>
             <p>Limited Support</p>
-            <div class="button-price2">
-                <p>Get Free</p>
+            <div class="Get-Free1"> 
+                <button type="submit">Get Free</button>
             </div>
         </div>
-        <div class="price-3">
+        <div class="price3">
             <h5>PROFESSIONAL</h5>
-            <h6>$<big>30</big> MO/</h6>
+            <h6>$<big>30</big> /MO</h6>
             <p>Unlimited Documents</p>
             <p>Unlimited Reviews</p>
             <p>Unlimited Members</p>
             <p>Unlimited Support</p>
-            <div class="button-price3">
-                <p>Get Free</p>
+            <div class="Get-Free"> 
+                <button type="submit">Get Free</button>
             </div>
         </div>
     </div>
