--- a/index.html
+++ b/index.html
@@ -135,7 +135,27 @@
         </div>
     </div>
 </section>
+<section class="footer-basic">
+    <img src="images/client-1.png" alt="">
+    <img src="images/client-2.png" alt="">
+    <img src="images/client-3.png" alt="">
+    <img src="images/client-4.png" alt="">
+    <img src="images/client-5.png" alt="">
+    <img src="images/client-6.png " alt="">
+</section>
+<section class="form">
 
+    <div class="letters-form">
+        <h1>Take a look inside</h1>
+            <p>Te iisque labitur eos, nec sale argumentum scribentur no, <br>
+            augue disputando in vim. Erat fugit sit at, ius lorem deserunl delerrruissel no.</p>
+             <div class="Learn-More"> 
+                <button type="submit">Learn More</button>
+            </div>
+            
+        </div>
+
+</section>
 </body>
 </html>
 
